--- a/4/4.3/4.3.md
+++ b/4/4.3/4.3.md
@@ -1,20 +1,11 @@
 # 4.3. Módulo de Gestión de Arrendamientos
-Responsabilidades
-- Mantenimiento de un registro detallado de todos los contratos de arrendamiento.
-- Gestión del ciclo de vida de los contratos (creación, modificación, renovación, terminación).
-- Asignación óptima de espacios disponibles.
-- Generación de reportes periódicos sobre la ocupación de los espacios y el rendimiento de los arrendamientos.
-- Gestión de las comunicaciones con los inquilinos.
-- Coordinación con otros módulos para garantizar la integridad de la información.
-### Módulo 4.3: Gestión de Arrendamientos
 
 | Requerimiento | Nombre |
 |---|---|
 | R001 | Crear un nuevo contrato de arrendamiento |
-| R002 | Modificar un contrato de arrendamiento existente |
+| R002 | Revisar los contratos de arrendamiento mediante filtros |
 | R003 | Gestionar los locales comerciales |
-| R004 | Visualizar el total de contratos |
-| R005 | Gestionar los detalles del contrato de cada inquilino |
+| R004 | Gestionar los detalles del contrato de cada inquilino |
 
 ## Caso de Uso #1: Crear un nuevo contrato de arrendamiento
 
@@ -24,53 +15,54 @@ Responsabilidades
 | Descripción | El administrador crea un nuevo contrato para un inquilino y un local específico, definiendo las condiciones del arrendamiento. |
 | Actor | Administrador |
 | Flujo de eventos |
-| 1 | El usuario accede al sistema y selecciona la opción "Crear nuevo contrato". |
-| 2 | El sistema presenta un formulario para ingresar los datos del nuevo contrato: inquilino, local, fecha de inicio, fecha de fin, monto de renta, forma de pago, y otras condiciones. |
+| 1 | El usuario accede al sistema en la seccion de arrendamientos y selecciona la opción "Crear nuevo contrato". |
+| 2 | El sistema muestra un formulario para ingresar los datos del nuevo contrato: inquilino, local, fecha de inicio, fecha de fin, monto de renta, forma de pago, y otras condiciones. |
 | 3 | El usuario completa el formulario con la información requerida. |
 | 4 | El sistema valida que el inquilino y el local existan en el sistema y que no haya conflictos de fechas con otros contratos. |
 | 5 | El sistema registra el nuevo contrato en la base de datos. |
-| 6 | El sistema genera el contrato en formato PDF y lo asocia al registro del inquilino y del local. |
-| 7 | Fin del caso de uso. |
+| 6 | Fin del caso de uso. |
 
-## Caso de Uso #2: Visualizar el total de contratos
+## Caso de Uso #2: Revisar los contratos de arrendamiento mediante filtros 
 
-**Descripción:** Este caso de uso detalla las acciones necesarias para obtener una visión general del número total de contratos activos en el sistema.
+**Descripción:** Este caso de uso detalla las acciones necesarias para obtener una lista de contratos filtrados en el sistema.
 
 | Código | R002 |
 |---|---|
-| Objetivo | Permitir al usuario visualizar el número total de contratos activos en el sistema. |
-| Descripción | El administrador puede obtener un reporte con el número total de contratos, filtrado por diferentes criterios (estado del contrato, tipo de local, rango de fechas, etc.). |
+| Objetivo | Permitir al usuario filtrar los contratos activos en el sistema. |
+| Descripción | El administrador puede obtener un reporte especifico de contratos, filtrado por diferentes criterios (estado del contrato, tipo de local, rango de fechas, etc.). |
 | Actor | Administrador |
 | Flujo de eventos |
-| 1 | El usuario accede al sistema y selecciona la opción "Reportes". |
-| 2 | El sistema muestra una lista de reportes disponibles, incluyendo el reporte de "Total de contratos". |
-| 3 | El usuario selecciona el reporte de "Total de contratos". |
-| 4 | El sistema presenta un formulario para filtrar los resultados (opcional): |
+| 1 | El usuario accede al sistema y selecciona la opción Contratos. |
+| 2 | El sistema muestra una lista del total de contratos. |
+| 4 | El sistema presenta un formulario para filtrar los resultados: |
 |   | - Estado del contrato (activo, vencido, etc.) |
-|   | - Tipo de local (comercial, oficina, etc.) |
+|   | - Tipo de local (tienda, modulo) |
 |   | - Rango de fechas (inicio, fin) |
-| 5 | El usuario aplica los filtros (si los hay) y envía la solicitud. |
+| 5 | El usuario aplica los filtros y envía la solicitud. |
 | 6 | El sistema consulta la base de datos y obtiene el número total de contratos que cumplen con los criterios de búsqueda. |
 | 7 | El sistema muestra el resultado en pantalla, presentando el número total de contratos encontrados. |
 | 8 | Fin del caso de uso. |
 
+## Caso de Uso #3: Gestionar los locales comerciales
+
+**Descripción:** Este caso de uso detalla las acciones relacionadas con la administración de los locales comerciales disponibles para arrendamiento.
+
 | Código | R003 |
 |---|---|
 | Objetivo | Permitir la gestión completa de los locales comerciales. |
-| Descripción | El administrador puede agregar nuevos locales, modificar información existente, dar de baja locales y consultar la disponibilidad de los mismos. |
+| Descripción | El administrador puede agregar nuevos locales, modificar información existente y consultar la disponibilidad de los mismos. |
 | Actor | Administrador |
 | Flujo de eventos |
 | 1 | El usuario accede al sistema y selecciona la opción "Gestionar locales comerciales". |
 | 2 | El sistema muestra un listado de todos los locales comerciales disponibles, incluyendo información como: |
-|   | - Número de local |
+|   | - Codigo de local |
 |   | - Ubicación |
 |   | - Tamaño |
 |   | - Estado (disponible, ocupado, en mantenimiento) |
 | 3 | El usuario selecciona una de las siguientes opciones: |
-|   | - **Agregar nuevo local:** Se muestra un formulario para ingresar los datos del nuevo local (número de local, ubicación, tamaño, descripción, etc.). |
-|   | - **Modificar local:** Se selecciona el local a modificar y se muestra un formulario con los datos actuales para su edición. |
-|   | - **Dar de baja local:** Se selecciona el local y se confirma la acción. El sistema marca el local como no disponible. |
-|   | - **Buscar locales:** Se muestra un formulario para realizar búsquedas por criterios como ubicación, tamaño, estado, etc. |
+|   | - Agregar nuevo local: Se muestra un formulario para ingresar los datos del nuevo local (ubicación, tamaño, descripción, etc.). |
+|   | - Modificar local: Se selecciona el local a modificar y se muestra un formulario con los datos actuales para su edición. |
+|   | - Buscar locales: Se muestra un formulario para realizar búsquedas por criterios como ubicación, tamaño, estado, etc. |
 | 4 | El sistema realiza la acción seleccionada por el usuario y actualiza la base de datos. |
 | 5 | El sistema muestra un mensaje de confirmación al usuario. |
 | 6 | Fin del caso de uso. |
@@ -82,48 +74,16 @@ Responsabilidades
 | Código | R004 |
 |---|---|
 | Objetivo | Permitir la gestión detallada de cada contrato de arrendamiento. |
-| Descripción | El administrador puede visualizar, modificar y eliminar información detallada de un contrato, como el inquilino, el monto de la renta, la fecha de inicio y fin, los pagos realizados, etc. |
+| Descripción | El administrador puede visualizar la información detallada de un contrato, como el inquilino, el monto de la renta, la fecha de inicio y fin, los pagos realizados, etc. |
 | Actor | Administrador |
 | Flujo de eventos |
-| 1 | El usuario accede al sistema y selecciona la opción "Gestionar contratos". |
-| 2 | El sistema muestra un listado de todos los contratos de arrendamiento, incluyendo información básica como número de contrato, inquilino, local, estado, etc. |
+| 1 | El usuario accede al sistema y selecciona la opción Contratos. |
+| 2 | El sistema muestra un listado de todos los contratos de arrendamiento, incluyendo información básica como codigo de contrato, inquilino, local, estado, etc. |
 | 3 | El usuario selecciona un contrato específico para visualizarlo. |
 | 4 | El sistema muestra una pantalla detallada del contrato seleccionado, incluyendo: |
 |   | - Información del inquilino (nombre, apellidos, DNI, dirección, teléfono) |
 |   | - Información del local (número de local, ubicación) |
 |   | - Condiciones del contrato (monto de la renta, fecha de inicio, fecha de fin) |
-|   | - Historial de pagos (fechas, importes) |
 |   | - Observaciones (notas adicionales) |
-| 5 | El usuario puede realizar las siguientes acciones: |
-|   | - **Modificar contrato:** Se muestra un formulario para editar la información del contrato. |
-|   | - **Registrar pago:** Se registra un nuevo pago realizado por el inquilino. |
-|   | - **Generar recibo:** Se genera un recibo de pago para el inquilino. |
-|   | - **Eliminar contrato:** Se elimina el contrato del sistema (con las debidas precauciones). |
-| 6 | El sistema actualiza la base de datos con los cambios realizados. |
-| 7 | El sistema muestra un mensaje de confirmación al usuario. |
-| 8 | Fin del caso de uso. |
-
-## Caso de Uso #5: Generar reportes personalizados
-
-**Descripción:** Este caso de uso detalla las acciones necesarias para permitir al usuario crear reportes personalizados a partir de los datos almacenados en el sistema.
-
-| Código | R005 |
-|---|---|
-| Objetivo | Permitir al usuario generar reportes personalizados a partir de los datos almacenados en el sistema. |
-| Descripción | El usuario puede crear reportes personalizados seleccionando los datos que desea visualizar y aplicando filtros para obtener resultados específicos. |
-| Actor | Administrador |
-| Flujo de eventos |
-| 1 | El usuario accede al sistema y selecciona la opción "Reportes". |
-| 2 | El sistema muestra una lista de reportes disponibles, incluyendo la opción de "Crear reporte personalizado". |
-| 3 | El usuario selecciona "Crear reporte personalizado". |
-| 4 | El sistema presenta un formulario para configurar el reporte: |
-|   | - **Fuente de datos:** Se seleccionan las tablas o vistas de la base de datos que contienen los datos a incluir en el reporte. |
-|   | - **Campos:** Se seleccionan los campos específicos de cada tabla que se desean mostrar en el reporte. |
-|   | **Filtros:** Se aplican filtros para limitar los datos a mostrar (por ejemplo, por fecha, tipo de local, estado del contrato, etc.). |
-|   | **Agrupación:** Se agrupan los datos por uno o más campos para obtener resúmenes (por ejemplo, agrupar los contratos por tipo de local). |
-|   | **Ordenación:** Se ordenan los datos según un criterio específico (por ejemplo, por fecha de inicio del contrato). |
-| 5 | El usuario puede guardar el reporte personalizado para usarlo en el futuro. |
-| 6 | El sistema genera el reporte y lo muestra en pantalla. |
-| 7 | El usuario puede exportar el reporte a diferentes formatos (PDF, Excel, CSV). |
-| 8 | Fin del caso de uso. |
+| 5 | Fin del caso de uso. |
 
