--- a/4/4.3/4.3.md
+++ b/4/4.3/4.3.md
@@ -1,5 +1,6 @@
-# 4.3. Módulo de Gestión de Arrendamientos
-
+# 4.3. Módulo 3
+Módulo de Gestión de Arrendamientos
+ 
 | Requerimiento | Nombre |
 |---|---|
 | R001 | Crear un nuevo contrato de arrendamiento |
