--- a/4/4.3/4.3.md
+++ b/4/4.3/4.3.md
@@ -1,5 +1,5 @@
 # 4.3. Módulo 3
-Módulo de Gestión de Arrendamientos
+<h1>Módulo de Gestión de Arrendamientos</h1>
  
 | Requerimiento | Nombre |
 |---|---|
