--- a/4/4.8/4.8.md
+++ b/4/4.8/4.8.md
@@ -7,26 +7,76 @@ Este módulo permite planificar y ejecutar tareas de mantenimiento en las instal
 
 | Requerimiento        |  Descripción                                                             |
 |-----------------------|--------------------------------------------------------------------------|
-|        R1            |    Definir y programar actividades de mantenimiento preventivo en cada instalación           |
+|        R1            | Definir y programar actividades de mantenimiento en cada instalación |
 |R2 |Registrar todas las actividades de mantenimiento realizadas en cada instalación|
+|R3 |Registrar incidencia para mantenimiento correctivo |
 
 ## Especificaciones de requerimientos
-* R1
+### R1 ( Requerimiento 1)
 
-| Nombre | Definir y programar actividades de mantenimiento preventivo en cada instalación |
+| Nombre | Definir y programar actividades de mantenimiento en cada instalación |
 |---------|---------------------------------------------------------------------------------|
-| Descripción| Este caso de uso permite al usuario planificar y programar actividades de mantenimiento preventivo para las infraestructuras en cada instalación                                                                               |
+| Descripción| Esto permite al usuario planificar y programar actividades de mantenimiento para las infraestructuras y equipos en cada instalación|                                                                               
 |Actor    | Administrador de Mantenimiento|
-| Precondiciones |Deben estar registrados los equipos, instalaciones y ubicaciones donde se realizarán los mantenimientos preventivos|
-| Postcondiciones | Se actualiza el calendario de mantenimientos preventivos en la interfaz del sistema|
+| Precondiciones |Deben estar registrados los equipos, instalaciones y ubicaciones donde se realizarán los mantenimientos|
+| Postcondiciones | Se actualiza el calendario de mantenimientos en la interfaz del sistema|
 
   Flujo de eventos:
   
 |Nro |  Acción del actor |    Respuesta del sistema   |
 |----|------------------|------------------------------|
-| 1 |  El Administrador de Mantenimiento accede al módulo de mantenimiento preventivo | El sistema muestra una Pantalla principal de selección|
-| 2 |  El Administrador selecciona la instalación, el encargado, Tipo de mantenimiento, Descripción, Prioridad, Fecha| El sistema muestra una opción de confirmación|
-| 3 |  El Administrador selección confirmar| El sistema le muestra una pantalla de confirmado |
+| 1 |  El Administrador de Mantenimiento accede al módulo de mantenimiento | El sistema muestra una Pantalla principal de selección: Programar mantenimiento y ver Incidencias|
+| 2 |  El Administrador selecciona la opción de Incidencias|El sistema le muestra los mantenimientos correctivos que se tiene que hacer|
+| 3 |  El Administrador selecciona una incidencia| El sistema le muestra una pantalla de añadir detalle|
+| 4 |  El Aministrador selecciona el encargado, Descripción, Prioridad, Fecha y confirma la programación de mantenimiento correctivo | El sistema le pide una confirmación|
+| 4 |  El Administrador selección confirmar| El sistema le muestra una pantalla de confirmado |
+
+  Flujo Alternativo:
+|Nro |  Acción del actor |    Respuesta del sistema   |
+|----|------------------|------------------------------|
+| 2 | El Administrador selecciona la opción de Programar mantenimiento|El sistema le pide los detalles del mantenimiento|
+| 3 | El Aministrador selecciona la instalación o equipo, el encargado, Descripción, Prioridad, Fecha y confirma la programación de mantenimiento|El sistema le pide una confirmación|
+| 4 |  El Administrador selección confirmar| El sistema le muestra una pantalla de confirmado | 
+
+
+### R2 (Requerimiento 2)
+
+| Nombre | Registrar Actividades de Mantenimiento |
+|---------|---------------------------------------------------------------------------------|
+| Descripción| Permite al usuario registrar todas las actividades de mantenimiento realizadas en cada instalación|
+|Actor    | Usuario Técnico|
+| Precondiciones |Debe haber actividades de mantenimiento programadas para ser registradas|
+| Postcondiciones |La actividad de mantenimiento queda registrada en el sistema|
+
+  Flujo de eventos:
+
+|Nro |  Acción del actor |    Respuesta del sistema   |
+|----|------------------|------------------------------|
+| 1 | El técnico de mantenimiento accede al sistema e inicia sesión | El sistema muestra una Pantalla principal de todos los mantenimientos a su cargo|
+| 2 | El técnico selecciona un mantenimiento en específico |El sistema le muestra una pantalla pidiendo detalles del mantenimiento|
+| 3 | El técnico ingresa los detalles de la actividad: Fecha y hora real de inicio y fin, Incidencias o desviaciones, Observaciones adicionales y confirma los datos y registra la actividad| El sistema almacena la información y muestra una confirmación de que la actividad ha sido registrada exitosamente|
+
+### R3 ( Requerimiento 3)
+| Nombre |Registrar Incidencia para Mantenimiento Correctivo |
+|---------|---------------------------------------------------------------------------------|
+| Descripción| Permite a los usuarios reportar una incidencia que requiera mantenimiento correctivo|
+|Actor    | Supervisor |
+| Precondiciones |La instalación o el equipo afectado debe estar previamente registrado en el sistema|
+| Postcondiciones |La incidencia queda registrada en el sistema para su futura revisión|
+
+  Flujo de eventos: 
+
+|Nro |  Acción del actor |    Respuesta del sistema   |
+|----|------------------|------------------------------|
+| 1 | El supervisor accede al sistema e inicia sesión | El sistema muestra una Pantalla principal con una opción de registrar incidencia |
+| 2 | El supervisor selecciona la opción| El sistema le muestra una pantalla pidiendo detalles de la incidencia|
+| 3 | El supervisor ingresa los detalles: Equipo o instalación, Descripción y registra la incidencia| El sistema almacena la información y añade la fecha y hora del registro de la incidencia y muestra una confirmación de que la incidencia ha sido registrada exitosamente|
+
+
+
+
+
+
 
 
 
