--- a/4/4.5/4.5.md
+++ b/4/4.5/4.5.md
@@ -1,3 +1,69 @@
 # 4.5. Módulo 5
+# Módulo de Facturación y Pagos
 
+## Descripción
+Este módulo permite gestionar el proceso de facturación, seguimiento de pagos, gestión de pagos atrasados y aplicación de cargos adicionales para los inquilinos del centro comercial.
+
+---
+
+## Requerimientos y Casos de Uso
+
+### Requerimiento R1: Generación Automática de Facturas
+- **Descripción**: Permite al administrador generar automáticamente facturas mensuales para cada inquilino basadas en los términos del contrato (alquiler, tarifas adicionales, impuestos, ajustes, etc.).
+- **Actor**: Administrador
+- **Precondiciones**: Los contratos de arrendamiento deben estar previamente registrados en el sistema.
+- **Postcondiciones**: La factura se genera y se envía automáticamente al inquilino. Se actualiza el estado de la factura en el sistema.
+
+#### Flujo de eventos:
+1. El Administrador accede al módulo de facturación y pagos.
+2. El sistema muestra la pantalla principal con las opciones: Generar facturas, Ver facturas, Gestionar pagos.
+3. El Administrador selecciona la opción "Generar Facturas".
+4. El sistema presenta un formulario con la lista de inquilinos y las opciones para ajustar los términos de facturación.
+5. El Administrador confirma la generación de facturas.
+6. El sistema genera las facturas y las envía automáticamente a los inquilinos correspondientes.
+7. El sistema actualiza el estado de las facturas como "Pendiente" y muestra una pantalla de confirmación.
+
+#### Flujo Alternativo:
+1. El Administrador selecciona la opción "Ajustar Términos de Facturación".
+2. El sistema permite editar los términos antes de generar las facturas.
+3. El Administrador ajusta los términos y selecciona "Confirmar".
+4. El sistema actualiza los términos y procede a generar las facturas basadas en los nuevos términos.
+
+---
+
+### Requerimiento R2: Registro de Pagos
+- **Descripción**: Permite al administrador o al sistema registrar los pagos realizados por los inquilinos automáticamente a través de la pasarela de pago.
+- **Actor**: Administrador,Sistema
+- **Precondiciones**: Debe haber facturas pendientes de pago en el sistema.
+- **Postcondiciones**: El estado de la factura se actualiza a "Pagado", y el sistema registra el pago con sus detalles.
+
+#### Flujo de eventos:
+1. El Administrador selecciona la opción "Pagos Automáticos".
+2. El sistema consulta la pasarela de pago y registra los pagos realizados automáticamente.
+3. El sistema actualiza el estado de las facturas pagadas a "Pagado" y genera recibos.
+4. El sistema muestra una confirmación automática de los pagos registrados.
+
+---
+
+
+### Requerimiento R3: Envío de Recordatorios de Pago
+- **Descripción**: Permite al sistema enviar recordatorios automáticos de pago antes de la fecha de vencimiento de las facturas o después del vencimiento.
+- **Actor**: Sistema
+- **Precondiciones**: Deben existir facturas pendientes de pago en el sistema.
+- **Postcondiciones**: Los inquilinos reciben recordatorios de sus facturas próximas a vencer o vencidas.
+
+#### Flujo de eventos:
+1. El sistema revisa las facturas pendientes de pago próximas a vencer.
+2. El sistema selecciona las facturas que requieren recordatorio.
+3. El sistema envía recordatorios automáticos a los inquilinos.
+4. El sistema registra el envío de la notificación y actualiza el historial del inquilino.
+5. El sistema muestra un informe de recordatorios enviados al Administrador.
+
+#### Flujo Alternativo:
+1. El Administrador decide enviar un recordatorio manualmente.
+2. El sistema permite seleccionar facturas específicas y enviar un recordatorio inmediato.
+3. El sistema envía el recordatorio y actualiza el historial de comunicación.
+4. El administrador recibe confirmación del envío.
+
+---
 # Módulo de Facturación y Pagos
