--- a/4/4.5/4.5.md
+++ b/4/4.5/4.5.md
@@ -2,7 +2,7 @@
 # Módulo de Facturación y Pagos
 
 ## Descripción
-Este módulo permite gestionar el proceso de facturación, seguimiento de pagos, gestión de pagos atrasados y aplicación de cargos adicionales para los inquilinos del centro comercial.
+Este módulo permite gestionar el proceso de facturación y hacer el seguimiento de pagos.
 
 ---
 
@@ -66,4 +66,4 @@ Este módulo permite gestionar el proceso de facturación, seguimiento de pagos,
 4. El administrador recibe confirmación del envío.
 
 ---
-# Módulo de Facturación y Pagos
+
