--- a/0/0.6_Emanuel/0.6.md
+++ b/0/0.6_Emanuel/0.6.md
@@ -1,6 +1,9 @@
-# 0.6. Integrante 6 Emanuel Ruben Huamani Ruiz
+<h1 align="center">Emanuel Ruben Huamani Ruiz</h1>
+<p align="center">
+  <img src="emanuel_huamani.png" alt="Emanuel Huamani" style="width: 300px; border-radius: 150px; border: 5px solid #fff;">
+</p>
 
-
+# About Me
 - Código: 20181195H
 - Nombre y Apellidos: Emnuel Rubén Huamani Ruiz
 - Correo: emanuel.huamani.r@uni.pe
