--- a/2/2.1/2.1.md
+++ b/2/2.1/2.1.md
@@ -1,3 +1,15 @@
 # 2.1. Procesos AS-IS
 
-Sample content for section 2.1.
+Acá mostratemos los procesos que hemos podido identificar de MallPlaza y como actualmente se manejan
+
+## Proceso de login y seguridad
+![Login](Login.png)
+
+## Proceso de gestión de empleados
+![Empleados](Empleados.png)
+
+## Proceso de Inquilinos
+Este flujo representa un proceso más de intervención humana y sistema desarticulados.
+![Inquilinos](ProcesoInquilino_ASIS.png)
+
+
