--- a/2/2.2/2.2.md
+++ b/2/2.2/2.2.md
@@ -1,3 +1,6 @@
 # 2.2. Procesos TO-BE
 
-Sample content for section 2.2.
+## Proceso Inquilinos
+El proceso del módulo inquilinos abarca desde el registro hasta la gestión de solicitudes. Se muestra la interacción entre el inquilino, administrador y el sistema en un solo diagrama simplificado.
+
+![Proceso Inquilinos](ProcesoInquilino_TOBE.png)
