--- a/0/0.6_Emanuel/0.6.md
+++ b/0/0.6_Emanuel/0.6.md
@@ -13,19 +13,19 @@
 # Presentación
 
 - ¿Por qué la UNI - FIIS?
-  La idea de UNI fue inculcada por mi padres desde que estoy en primaria, mi padre estudió aquí así que desde ahí me metieron la idea de terminar estudiando aquí, luego ya en secundaria notaría mi habilidad en las matemáticas y decidiría postular ahí y FIIS por que me empezó a atraer el mundo de la informática en Ingeniería de Sistemas tenía esa rama.
+  La idea de la UNI fue inculcada por mis padres desde que estaba en primaria. Mi padre estudió aquí, así que desde entonces me inculcaron la idea de terminar estudiando en esta universidad. Luego, ya en secundaria, noté mi habilidad en las matemáticas y decidí postular. Elegí FIIS porque me empezó a atraer el mundo de la informática, y en Ingeniería de Sistemas está presente esa rama.
 
 - ¿Cómo evalúo mi experiencia con lo cursos de la carrera hasta el momento?
-  Me gusta lo mucho que te aporta la universidad en base teórica, y me gustaron mucho los cursos de algoritmia y programación orientada a objetos y que serían alguno de los pocos que vería en ingeniería de sistemas.
+  Me gusta lo mucho que la universidad te aporta en base teórica. Disfruté mucho los cursos de algoritmia y programación orientada a objetos, los cuales fueron de los pocos que vería en Ingeniería de Sistemas.
 
 - ¿Cuál es mi experiencia en programación y base de datos?
-  Participé en el grupo de Programación Competitiva UNI teniendo la oportunidad de representar a la universidad en algunas ocaciones, además actualmente me encuentro practicando cómo programador backend y en base de datos tengo lo del curso de modelado prinsipalmente.
+  Participo en el grupo de Programación Competitiva de la UNI, teniendo la oportunidad de representar a la universidad en algunas ocasiones. Además, actualmente me encuentro practicando como programador backend. En cuanto a bases de datos, tengo la experiencia del curso de modelado, principalmente.
 
 - ¿Cómo fue mi experiencia en el curso de Modelado Conceptural de datos y qué tema elegí?
-  Bastante buena, aprendí muchos de los conceptos y hacer la parte de logística de una empresa, se nos terminó complicando en la parte final, pero al final nos sirvió bastante.
+  Fue bastante buena. Aprendí muchos conceptos y trabajé en la parte logística de una empresa. Se nos complicó un poco la parte final, pero al final nos sirvió mucho.
 
 - ¿Qué espero del curso?
-  Espero poder aprender mucho más sobre Desarrollo y aprender y dominar los conceptos de diseño de base de datos que me puedan servir en el mundo laboral. Además de aprender y dominar más sobre el uso de git y de los motores de Base de datos.
+  Espero poder aprender mucho más sobre desarrollo y dominar los conceptos de diseño de bases de datos que me sirvan en el mundo laboral. Además, quiero aprender y dominar más sobre el uso de Git y de los motores de bases de datos.
 
 - ¿Cómo me veo en 10 años?
-  Ya teniendo una empresa propia o iniciando una empresa tecnológica, Ya siendo un desarrollador experto y ya teniendo una maestría.
+  Me veo ya teniendo una empresa propia o iniciando una empresa tecnológica, siendo un desarrollador experto y con una maestría.
