fix personal email

--- a/0/0.6_Emanuel/0.6.md
+++ b/0/0.6_Emanuel/0.6.md
@@ -7,7 +7,7 @@
 - Código: 20181195H
 - Nombre y Apellidos: Emnuel Rubén Huamani Ruiz
 - Correo: emanuel.huamani.r@uni.pe
-- Correo personal: emanuelhr2700@gmail.com
+- Correo personal: emanuelrubenhuamaniruiz@gmail.com
 - Edad: 24 años
 
 # Presentación
