--- a/4/4.md
+++ b/4/4.md
@@ -62,7 +62,7 @@
         </tr>
         <tr>
             <td>6</td>
-            <td>Financiera</td>
+            <td>Recobro</td>
             <td>6</td>
             <td>Nombre del requerimiento</td>
             <td>R006</td>
@@ -122,7 +122,7 @@
 #### Interacción con otros módulos
 - 
 
-### 4.2.6. Módulo Financiera
+### 4.2.6. Módulo Recobro
 #### Responsabilidades
 - 
 #### Interacción con otros módulos
