--- a/4/4.5/4.5.md
+++ b/4/4.5/4.5.md
@@ -2,73 +2,61 @@
 
 ### Módulo de Facturación y Pagos
 
-Descripción:  
-Este módulo permite gestionar el proceso de facturación y hacer el seguimiento de pagos.
+| Requerimiento | Nombre |
+|---|---|
+| R001 | Generación Automática de Facturas |
+| R002 | Registro de Pagos |
+| R003 | Envío de Recordatorios de Pago | 
+
+
+Aquí tienes la estructura en tablas de los requerimientos solicitados, siguiendo el formato del **Módulo de Gestión de Arrendamientos**:
 
 ---
 
-### **Requerimiento R1**
-**Nombre**: Generación Automática de Facturas  
-**Descripción**: Permite al administrador generar automáticamente facturas mensuales para cada inquilino basadas en los términos del contrato (alquiler, tarifas adicionales, impuestos, ajustes, etc.).  
-**Actor**: Administrador  
-**Precondiciones**: Los contratos de arrendamiento deben estar previamente registrados en el sistema.  
-**Postcondiciones**: La factura se genera y se envía automáticamente al inquilino. Se actualiza el estado de la factura en el sistema.  
-
-#### **Flujo de eventos**:
-
-| Nro | Acción del actor | Respuesta del sistema |
-| --- | ---------------- | --------------------- |
-| 1 | El Administrador accede al módulo de facturación y pagos | El sistema muestra la pantalla principal con las opciones: Generar facturas, Ver facturas, Gestionar pagos |
-| 2 | El Administrador selecciona la opción "Generar Facturas" | El sistema presenta un formulario con la lista de inquilinos y las opciones para ajustar los términos de facturación (si es necesario) |
-| 3 | El Administrador confirma la generación de facturas | El sistema genera las facturas y las envía automáticamente a los inquilinos correspondientes |
-| 4 | El sistema actualiza el estado de las facturas como "Pendiente" | El sistema muestra una pantalla de confirmación de que las facturas fueron generadas y enviadas |
-
-#### **Flujo Alternativo**:
-
-| Nro | Acción del actor | Respuesta del sistema |
-| --- | ---------------- | --------------------- |
-| 2 | El Administrador selecciona la opción "Ajustar Términos de Facturación" | El sistema permite editar los términos para un inquilino o grupo de inquilinos antes de generar las facturas |
-| 3 | El Administrador ajusta los términos y selecciona "Confirmar" | El sistema actualiza los términos y procede a generar las facturas basadas en los nuevos términos |
-
 ---
 
-### **Requerimiento R2**
-**Nombre**: Registro de Pagos  
-**Descripción**: Permite al administrador o al sistema registrar los pagos realizados por los inquilinos, ya sea manualmente (si se realizan fuera de la plataforma) o automáticamente a través de la pasarela de pago.  
-**Actor**: Administrador, Sistema  
-**Precondiciones**: Debe haber facturas pendientes de pago en el sistema.  
-**Postcondiciones**: El estado de la factura se actualiza a "Pagado", y el sistema registra el pago con sus detalles.  
+## **Caso de Uso #1: Generación Automática de Facturas**
 
-#### **Flujo de eventos**:
+| Código | R001 |
+|---|---|
+| **Objetivo** | Permitir al administrador generar automáticamente facturas mensuales basadas en los términos del contrato. |
+| **Descripción** | El administrador puede generar facturas automáticas mensuales para los inquilinos, incluyendo alquiler, tarifas adicionales e impuestos. |
+| **Actor** | Administrador |
+| **Flujo de eventos** |
+| 1 | El Administrador accede al módulo de facturación y selecciona la opción "Generar Facturas". |
+| 2 | El sistema muestra un formulario con la lista de inquilinos y las opciones para ajustar los términos de facturación si es necesario. |
+| 3 | El Administrador confirma la generación de facturas. |
+| 4 | El sistema genera las facturas y las envía automáticamente a los inquilinos. |
+| 5 | El sistema actualiza el estado de las facturas a "Pendiente". |
+| 6 | Fin del caso de uso. |
 
-| Nro | Acción del actor | Respuesta del sistema |
-| --- | ---------------- | --------------------- |
-| 2 | El Administrador selecciona la opción "Pagos Automáticos" | El sistema consulta la pasarela de pago y registra los pagos realizados automáticamente |
-| 3 | El sistema actualiza el estado de las facturas pagadas a "Pagado" y genera recibos | El sistema muestra una confirmación automática de los pagos registrados |
+## **Caso de Uso #2: Registro de Pagos**
 
----
+| Código | R002 |
+|---|---|
+| **Objetivo** | Registrar los pagos realizados por los inquilinos. |
+| **Descripción** | Permite al administrador o al sistema registrar los pagos realizados, ya sea manualmente o automáticamente a través de una pasarela de pago. |
+| **Actor** | Administrador, Sistema |
+| **Flujo de eventos** |
+| 1 | El Administrador accede al módulo de pagos y selecciona la opción "Registrar Pago Manual" o "Pagos Automáticos". |
+| 2 | El Administrador selecciona una factura y el sistema solicita detalles del pago. |
+| 3 | El Administrador ingresa los detalles y confirma el pago. |
+| 4 | El sistema actualiza el estado de la factura a "Pagado". |
+| 5 | El sistema envía una notificación al inquilino y genera el recibo. |
+| 6 | Fin del caso de uso. |
 
+## **Caso de Uso #3: Envío de Recordatorios de Pago**
 
-### **Requerimiento R3**
-**Nombre**: Envío de Recordatorios de Pago  
-**Descripción**: Permite al sistema enviar recordatorios automáticos de pago antes de la fecha de vencimiento de las facturas o después del vencimiento.  
-**Actor**: Sistema  
-**Precondiciones**: Deben existir facturas pendientes de pago en el sistema.  
-**Postcondiciones**: Los inquilinos reciben recordatorios de sus facturas próximas a vencer o vencidas.  
-
-#### **Flujo de eventos**:
-
-| Nro | Acción del actor | Respuesta del sistema |
-| --- | ---------------- | --------------------- |
-| 1 | El sistema revisa las facturas pendientes de pago próximas a vencer | El sistema selecciona las facturas que requieren recordatorio |
-| 2 | El sistema envía recordatorios automáticos a los inquilinos | El sistema registra el envío de la notificación y actualiza el historial del inquilino |
-| 3 | El sistema muestra un informe de recordatorios enviados al Administrador | El administrador puede revisar el estado de los recordatorios y las respuestas de los inquilinos |
-
-#### **Flujo Alternativo**:
-
-| Nro | Acción del actor | Respuesta del sistema |
-| --- | ---------------- | --------------------- |
-| 2 | El Administrador decide enviar un recordatorio manualmente | El sistema permite seleccionar facturas específicas y enviar un recordatorio inmediato |
-| 3 | El sistema envía el recordatorio y actualiza el historial de comunicación | El administrador recibe confirmación del envío |
+| Código | R003 |
+|---|---|
+| **Objetivo** | Enviar recordatorios de pago antes o después del vencimiento de una factura. |
+| **Descripción** | El sistema puede enviar recordatorios automáticos o manuales de pago a los inquilinos que tienen facturas por vencer o vencidas. |
+| **Actor** | Sistema, Administrador |
+| **Flujo de eventos** |
+| 1 | El sistema revisa las facturas pendientes de pago próximas a vencer o ya vencidas. |
+| 2 | El sistema envía recordatorios automáticos a los inquilinos. |
+| 3 | El sistema registra el envío de la notificación y actualiza el historial del inquilino. |
+| 4 | El Administrador puede revisar el estado de los recordatorios enviados. |
+| 5 | Fin del caso de uso. |
 
 ---
