--- a/4/4.7/4.7.md
+++ b/4/4.7/4.7.md
@@ -1,3 +1,13 @@
 # 4.7. Módulo 7
 
-# Módulo de Eventos
+<h1>Módulo de Eventos y Módulos</h1>
+
+| Requerimiento | Nombre |
+|---------------|--------|
+| R001 | Separar un espacio arrendable disponible o una zona común |
+| R002 | Definir los conceptos de facturación |
+| R003 | Crear un contrato de Evento |
+
+## Especificaciones de requerimientos <br>
+### Caso de Uso #1: Separar un espacio arrendable disponible o una zona común
+
