--- a/4/4.8/4.8.md
+++ b/4/4.8/4.8.md
@@ -35,7 +35,7 @@ Este módulo permite planificar y ejecutar tareas de mantenimiento en las instal
 |Nro |  Acción del actor |    Respuesta del sistema   |
 |----|------------------|------------------------------|
 | 2 | El Administrador selecciona la opción de Programar mantenimiento|El sistema le pide los detalles del mantenimiento|
-| 3 | El Aministrador selecciona la instalación o equipo, el encargado, Descripción, Prioridad, Fecha y confirma la programación de mantenimiento|El sistema le pide una confirmación|
+| 3 | El Aministrador selecciona la instalación, el encargado, Descripción, Prioridad, Fecha y confirma la programación de mantenimiento|El sistema le pide una confirmación|
 | 4 |  El Administrador selección confirmar| El sistema le muestra una pantalla de confirmado | 
 
 
@@ -44,7 +44,7 @@ Este módulo permite planificar y ejecutar tareas de mantenimiento en las instal
 | Nombre | Registrar Actividades de Mantenimiento |
 |---------|---------------------------------------------------------------------------------|
 | Descripción| Permite al usuario registrar todas las actividades de mantenimiento realizadas en cada instalación|
-|Actor    | Usuario Técnico|
+|Actor    |Supervisor|
 | Precondiciones |Debe haber actividades de mantenimiento programadas para ser registradas|
 | Postcondiciones |La actividad de mantenimiento queda registrada en el sistema|
 
@@ -52,9 +52,9 @@ Este módulo permite planificar y ejecutar tareas de mantenimiento en las instal
 
 |Nro |  Acción del actor |    Respuesta del sistema   |
 |----|------------------|------------------------------|
-| 1 | El técnico de mantenimiento accede al sistema e inicia sesión | El sistema muestra una Pantalla principal de todos los mantenimientos a su cargo|
-| 2 | El técnico selecciona un mantenimiento en específico |El sistema le muestra una pantalla pidiendo detalles del mantenimiento|
-| 3 | El técnico ingresa los detalles de la actividad: Fecha y hora real de inicio y fin, Incidencias o desviaciones, Observaciones adicionales y confirma los datos y registra la actividad| El sistema almacena la información y muestra una confirmación de que la actividad ha sido registrada exitosamente|
+| 1 | El supervisor de mantenimiento accede al sistema e inicia sesión | El sistema muestra una Pantalla principal de todos los mantenimientos a su cargo|
+| 2 | El supervisor selecciona un mantenimiento en específico |El sistema le muestra una pantalla pidiendo detalles del mantenimiento|
+| 3 | El supervisor ingresa los detalles de la actividad: Fecha y hora real de inicio y fin, Observaciones adicionales y confirma los datos y registra la actividad| El sistema almacena la información y muestra una confirmación de que la actividad ha sido registrada exitosamente|
 
 ### R3 ( Requerimiento 3)
 | Nombre |Registrar Incidencia para Mantenimiento Correctivo |
@@ -70,7 +70,7 @@ Este módulo permite planificar y ejecutar tareas de mantenimiento en las instal
 |----|------------------|------------------------------|
 | 1 | El supervisor accede al sistema e inicia sesión | El sistema muestra una Pantalla principal con una opción de registrar incidencia |
 | 2 | El supervisor selecciona la opción| El sistema le muestra una pantalla pidiendo detalles de la incidencia|
-| 3 | El supervisor ingresa los detalles: Equipo o instalación, Descripción y registra la incidencia| El sistema almacena la información y añade la fecha y hora del registro de la incidencia y muestra una confirmación de que la incidencia ha sido registrada exitosamente|
+| 3 | El supervisor ingresa los detalles: Instalación, Descripción y registra la incidencia| El sistema almacena la información y añade la fecha y hora del registro de la incidencia y muestra una confirmación de que la incidencia ha sido registrada exitosamente|
 
 
 
