--- a/3/3.md
+++ b/3/3.md
@@ -1,6 +1,6 @@
 3. Especificación de Módulos
 
-Modulo de recobro
+6. Modulo de recobro
 
   Descripcion: Mediante este modulo los inquilinos y la empresa pueden gestionar los servicios extras que el inquilino requiera para su negocio.
   
