--- a/3/3.md
+++ b/3/3.md
@@ -1,13 +1,48 @@
-3. Especificación de Módulos
+# Especificacion de módulos
+## 1. Módulo de Logueo y Seguridad
+### Responsabilidades
+- 
+#### Interacción con otros módulos
+- 
 
-6. Modulo de recobro
+## 2. Módulo de Usuarios
+### Responsabilidades
+- 
+### Interacción con otros módulos
+- 
 
-  Descripcion: Mediante este modulo los inquilinos y la empresa pueden gestionar los servicios extras que el inquilino requiera para su negocio.
-  
-  Responsabilidad: Gestionar el proceso de los recobros desde el momento en que el inquilino realice la solicitud hasta que se comunique la factura del recobro
-  
-  Interaccion: Con el modulo de gestion de inquilinos y modulo de facturacion y pagos
-  
+## 3 Módulo de Arrendamientos
+### Responsabilidades
+- 
+### Interacción con otros módulos
+- 
+
+## 4. Módulo de Inquilinos
+### Responsabilidades
+- Registro y Gestión de Inquilinos: Almacenar y manteren la información de los inquilinos, incluyendo su nombre, razon social, RUC, dirección, teléfono y correo electrónico.
+- Gestión de Contratos de Arrendamiento.
+- Monitoreo de Espacios Asignados: Aseguramiento de los espacios esten debidamente ocupados y gestionados en función al contrato.
+### Interacción con otros módulos
+- Con el módulo de Usuarios, los empleados gestionan los inquilinos deben estar registrados en este módulo.
+- Con el módulo de Arrendamientos, el estado de los arrendamientos (activo, expirado, pendiente de renovación).
+- Con Facturación y Pagos, este modulo se comunica con inquilinos para generar las facturas mensuales o según lo acordado y registrar los pagos que realizan.
+- Con Gestión Financiera, ingresos generados por los contratros de arrendamiento de los inquilinos, seguimiento de pagos, cuentas por cobrar y proyecciones de ingresos.
+- Con eventos, un inquilino participa en un evento.
+- Con Mantenimiento y Servicios, si un espacio arrendado por un inquilino requiere mantenimiento, este módulo gestionará las solicitudes de servicio, pero el de inquilinos será responsable de mantener la comunicación con el inquilino afectado.
+
+## 5. Módulo de Facturación y Pagos
+### Responsabilidades
+- 
+### Interacción con otros módulos
+- 
+
+## 6. Módulo Recobro
+Mediante este modulo los inquilinos y la empresa pueden gestionar los servicios extras que el inquilino requiera para su negocio.
+### Responsabilidades
+- Gestionar el proceso de los recobros desde el momento en que el inquilino realice la solicitud hasta que se comunique la factura del recobro
+### Interacción con otros módulos
+- Con el modulo de gestion de inquilinos y modulo de facturacion y pagos
+
   Detalles del estado:
   
     Enviado: Se realizo el envio de la solicitud para el servicio
@@ -41,3 +76,17 @@
   - Recepcion del recobro
     
     Responsabilidad: Comunicar al modulo de factura y pagos sobre la facturacion del recobro
+
+## 7. Módulo de Eventos
+### Responsabilidades
+- 
+### Interacción con otros módulos
+- 
+
+## 8. Módulo de Mantenimiento y Servicio
+### Responsabilidades
+- 
+### Interacción con otros módulos
+- 
+
+
