--- a/4/4.1/4.1.md
+++ b/4/4.1/4.1.md
@@ -1,3 +1,12 @@
 # 4.1. Módulo 1
 
 # Módulo de Logueo y seguridad
+
+#### - Caso de uso #1: Autenticación de usuario
+| Código | R001  |
+|----------|----------|
+|Objetivo  |Verificar la identidad del usuario mediante un correo y una contraseña ingresada de manera correcta|
+| Descripción   | El usuario ingresará su correo y contraseña respectiva para poder acceder al sistema de planillas; dicho sistema se encargará de verificar si los datos ingresados son correctos   |
+| Actor primario    | Un administrador de RRHH o otro empleado de la empresa  |
+| Actor secundario    | -  |
+| Precondiciones    | Los datos que ingrese el usuario deben estar en la base de datos del sistema  |
