--- a/4/4.1/4.1.md
+++ b/4/4.1/4.1.md
@@ -1,6 +1,8 @@
 # 4.1. Módulo 1
 
 # Módulo de Logueo y seguridad
+| Código | R001  |
+
 
 #### - Caso de uso #1: Autenticación de usuario
 | Código | R001  |
