--- a/4/4.1/4.1.md
+++ b/4/4.1/4.1.md
@@ -2,6 +2,8 @@
 
 # Módulo de Logueo y seguridad
 | Código | R001  |
+|----------|----------|
+|R001  |Autenticación de usuario|
 
 
 #### - Caso de uso #1: Autenticación de usuario
